<resources>
    <string name="app_name">YourAnimeList</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minutes">%1</string>
    <string name="relation">Relations</string>
    <string name="average">Average</string>
    <string name="mean">Mean</string>
    <string name="popularity">Popularity</string>
    <string name="favorites">Favorites</string>
    <string name="romaji">Romaji</string>
    <string name="info">Info</string>
    <string name="english">English</string>
    <string name="natives">Native</string>
    <string name="format">Format</string>
    <string name="episode">Episode</string>
    <string name="episode_duration">Episode Duration</string>
    <string name="status">Status</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="season">Season</string>
    <string name="studio">Studio</string>
    <string name="producer">Producer</string>
    <string name="loerm">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="view_all">View All</string>
    <string name="recommendations">Recommendations</string>
</resources>