<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="model"
            type="com.chs.youranimelist.AnimeOverviewQuery.Media" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/anime_overview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.browse.anime.overview.AnimeOverviewFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_anime_overview_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Description"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_anime_overview_genre" />

        <TextView
            android:id="@+id/txt_anime_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            tools:text="@string/loerm"
            app:animeOverviewHtmlConvert="@{model.description}"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_anime_description">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/average"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/mean"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/textView20"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/popularity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/textView21"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="32dp"
                android:text="@string/favorites"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textStyle="bold"
                app:animeOverviewScoreConvert="@{model.averageScore.toString()}"
                app:layout_constraintEnd_toEndOf="@+id/textView15"
                app:layout_constraintStart_toStartOf="@+id/textView15"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0%" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textStyle="bold"
                app:animeOverviewScoreConvert="@{model.meanScore.toString()}"
                app:layout_constraintEnd_toEndOf="@+id/textView16"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0%" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textStyle="bold"
                android:text="@{model.popularity.toString()}"
                app:layout_constraintEnd_toEndOf="@+id/textView17"
                app:layout_constraintStart_toStartOf="@+id/textView17"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textStyle="bold"
                android:text="@{model.favourites.toString()}"
                app:layout_constraintEnd_toEndOf="@+id/textView18"
                app:layout_constraintStart_toStartOf="@+id/textView18"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/info"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/romaji"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/txt_anime_overview_romaji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            android:text="@{model.title.romaji}"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/english"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/txt_anime_overview_romaji" />

        <TextView
            android:id="@+id/txt_anime_overview_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            app:animeOverviewEnglishNull="@{model.title}"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt_anime_overview_romaji"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/natives"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/txt_anime_overview_english" />

        <TextView
            android:id="@+id/txt_anime_overview_native"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            android:text="@{model.title.native_}"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt_anime_overview_english"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/format"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/txt_anime_overview_native" />

        <TextView
            android:id="@+id/txt_anime_overview_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.format.toString()}"
            app:layout_constraintStart_toStartOf="@+id/txt_anime_overview_native"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/episode"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/txt_anime_overview_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:animeOverviewEpisode="@{model.episodes}"
            app:layout_constraintStart_toStartOf="@+id/txt_anime_overview_format"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/episode_duration"
            app:animeOverviewDurationVisible="@{model.duration}"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/txt_anime_overview_episode_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:animeOverviewDurationVisible="@{model.duration}"
            app:animeOverviewDurationValue="@{model.duration}"
            app:layout_constraintStart_toStartOf="@+id/txt_anime_overview_episode"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/txt_anime_overview_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:animeOverviewStatusValue="@{model.status.toString()}"
            app:layout_constraintStart_toStartOf="@+id/txt_anime_overview_episode_duration"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_date"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/txt_anime_overview_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:animeOverviewDateText="@{model.startDate}"
            app:layout_constraintStart_toStartOf="@+id/txt_anime_overview_status"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/end_date"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/txt_anime_overview_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:animeOverviewDateText="@{model.endDate}"
            app:layout_constraintStart_toStartOf="@+id/txt_anime_overview_start_date"
            app:layout_constraintTop_toTopOf="@+id/textView13"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/season"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/txt_anime_overview_season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_500"
            app:animeOverviewSeasonValue="@{model}"
            app:layout_constraintStart_toStartOf="@+id/txt_anime_overview_end_date"
            app:layout_constraintTop_toTopOf="@+id/textView14"
            tools:text="TextView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_anime_overview_relation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/relation"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/txt_anime_overview_season" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
